--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <mybatis.mapper.version>2.0.4</mybatis.mapper.version>
     </properties>
 
     <dependencies>
@@ -39,11 +40,36 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- Spring Data JPA 依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.3</version>
+        </dependency>
+
+        <!-- 通用Mapper -->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>${mybatis.mapper.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.persistence</groupId>
+                    <artifactId>persistence-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.spring4all</groupId>
+            <artifactId>swagger-spring-boot-starter</artifactId>
+            <version>1.7.1.RELEASE</version>
+        </dependency>
+
         <!-- 数据库驱动依赖 -->
         <dependency>
             <groupId>mysql</groupId>
