--- a/haiyc-web/src/main/resources/application.yml
+++ b/haiyc-web/src/main/resources/application.yml
@@ -4,6 +4,22 @@ spring:
     url: jdbc:mysql://localhost:3306/haiyc?serverTimezone=Asia/Shanghai
     username: root
     password: root
+  redis:
+    database: 0
+    host: 127.0.0.1
+    port: 6379
+    password: redis
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: 1
+        max-idle: 8
+        min-idle: 0
+    timeout: 10000
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 100MB
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
@@ -18,3 +34,12 @@ mapper:
   safe-delete: true
   safe-update: true
   identity: MYSQL
+
+file:
+  size: 5
+  path: E:/station
+  visitPath: file:///E:/station/
+
+logging:
+  level:
+    com.yc.dao: debug
